working on small screen bug

--- a/src/packages/modules/language-interstitial-z5/css/_responsive-language-interstitial-z5.scss
+++ b/src/packages/modules/language-interstitial-z5/css/_responsive-language-interstitial-z5.scss
@@ -9,9 +9,8 @@ $desktopMin: px-em(980);
 
 @media ( max-width: $phone ) {
     .module-li {
-      .hero-image,
-      .image-module {
-        height: 234px;
+      .hero-image {
+        height: 300px;
       }
       .box {
         margin: 40px 0 40px 0;
@@ -39,9 +38,8 @@ $desktopMin: px-em(980);
 
 @media ( max-width: $phoneMax ) {
   .module-li {
-    .hero-image,
-    .image-module {
-      height: 234px;
+    .hero-image {
+      height: 300px;
     }
     .box {
       margin: 48px 0 47px 0;
@@ -67,7 +65,7 @@ $desktopMin: px-em(980);
   .module-li-main {
     .hero-image,
     .image-module {
-      height: 234px;
+      height: 592px;
     }
     .module-text-box {
       width: 100%;
