--- a/src/packages/modules/language-interstitial-z5/css/language-interstitial-z5.scss
+++ b/src/packages/modules/language-interstitial-z5/css/language-interstitial-z5.scss
@@ -5,6 +5,9 @@
   .module-li-bg {
     background-color: #4a5676;
   }
+  .hero-image {
+    height: 300px;
+  }
   .image-module{
     height:300px;
     background-size: cover;
